--- a/css/_videolayout_default.scss
+++ b/css/_videolayout_default.scss
@@ -555,7 +555,7 @@
 }
 
 .dynamic-shadow {
-    border-radius: 50%;
+    border-radius: 30%;
     position: absolute;
     top: 50%;
     left: 50%;
